# sha256-benchmarks

./: .gitignore  LICENSE  README.md  TODO  dependencies.md  dependencies.txt  machines.json
benchmarks/: CMakeLists.txt  benchmark.h  benchmark_all_tools.sh
benchmarks/bitcoin/: CMakeLists.txt  benchmark.cfg  main.cc
benchmarks/cmake/: Benchmark.cmake
benchmarks/crypto++/: .gitignore  CMakeLists.txt  benchmark.cfg  main.cc
benchmarks/golang/openssl/: benchmark.sh  result-benchmark-openssl.json
benchmarks/hashlib/: benchmark.cfg
benchmarks/intel-crypto-SHA-NI-sha256/: .gitignore  CMakeLists.txt  benchmark.cfg  main.cc  sha_ni_available.cc
benchmarks/intel-crypto-sha256/: .gitignore  CMakeLists.txt  benchmark.cfg  main.cc
benchmarks/libbitcoin/: .gitignore  CMakeLists.txt  benchmark.cfg  main.cc
benchmarks/openssl/: .gitignore  CMakeLists.txt  benchmark.cfg  main.cc
benchmarks/openssl-cli/: benchmark.cfg
benchmarks/sha2/: .gitignore  CMakeLists.txt  Cargo.toml  benchmark.cfg
benchmarks/sha2/src/: main.rs
benchmarks/sha256sum/: benchmark.cfg
benchmarks/shasum/: benchmark.cfg
benchmarks/shell/: benchmark_all_tools.sh  benchmarker  benchmarker.sh
benchmarks/shell/openssl/: benchmark.cfg  benchmark.sh  dependencies.txt
benchmarks/shell/sha256sum/: benchmark.cfg  benchmark.sh  dependencies.txt  result-benchmark-sha256sum@billy.json
benchmarks/shell/shasum/: benchmark.cfg  benchmark.sh  dependencies.txt
benchmarks/wolfssl/: .gitignore  CMakeLists.txt  benchmark.cfg  main.cc
docs/: Dependencies.md
results/: benchmark-OpenSSL-3.0.14-shell@Billy_20250216.json  benchmark-bitcoin-28.99.0-bin@Billy_20250227.json  benchmark-crypto++-8.7-bin@Billy_20250223.json  benchmark-hashlib-python-3.11-python@Billy_20250217.json  benchmark-hashlib-python-3.11-python@Billy_20250302.json  benchmark-intel-crypto-sha256-1.2.0-bin@Billy_20250302.json  benchmark-openssl-3.0.14-bin@Billy_20250218.json  benchmark-rust-sha2-bin@Billy_20250302.json  benchmark-sha256sum-9.1-shell@Billy_20250216.json  benchmark-shasum-6.02-shell@Billy_20250216.json  benchmark-shell-OpenSSL-3.0.14@Billy_20250216.json  benchmark-shell-sha256sum-9.1@Billy_20250216.json  benchmark-shell-shasum-6.02@Billy_20250216.json  benchmark-wolfssl-5.5.4-bin@Billy_20250217.json  result-benchmark-shasum@billy.json
scripts/: benchmarker
