cmake_minimum_required(VERSION 3.10)
project(sha256-benchmarks VERSION 1.0)

message(STATUS "COMPILER TIME!")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

message(STATUS "CMAKE_CXX_COMPILER_ID: ${CMAKE_CXX_COMPILER_ID}")
message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB DIRS LIST_DIRECTORIES true "${CMAKE_CURRENT_SOURCE_DIR}/*") 
message(STATUS "Benchmark directories: ${DIRS}")
foreach(benchmark_dir ${DIRS})
    if(IS_DIRECTORY ${benchmark_dir})
	    if(EXISTS ${benchmark_dir}/CMakeLists.txt)
		    message(STATUS "Adding benchmark: ${benchmark_dir}")
		    add_subdirectory(${benchmark_dir})
	    endif()
    endif()
endforeach()
